--- a/lib/admin/admin-general/template.jade
+++ b/lib/admin/admin-general/template.jade
@@ -18,6 +18,11 @@
         div.col-sm-10
           textarea.form-control( id='creationReason', name='creationReason', placeholder=t('forum.form.creationReason.placeholder'), validate='required')=forum.creationReason
       .form-group
+        label.col-sm-2.control-label(for='justificatory') #{t('forum.form.justificatory')}  
+        div.col-sm-10
+          input.form-control(type='hidden', id='justificatory', name='justificatory', value=forum.justificatoryUrl)
+          div.uploadJustificatory 
+      .form-group
         label.col-sm-2.control-label(for='title')
           = t('forum.form.title.label')
         div.col-sm-10
