--- a/lib/system/forums/form.jade
+++ b/lib/system/forums/form.jade
@@ -11,7 +11,12 @@
       .form-group
         label.col-sm-2.control-label(for='creationReason') #{t('forum.form.creationReason.label')}
         div.col-sm-10
-          textarea.form-control( id='creationReason', name='creationReason', placeholder=t('forum.form.creationReason.placeholder'), validate='required')=forum.creationReason
+          textarea.form-control( id='creationReason', name='creationReason', placeholder=t('forum.form.creationReason.placeholder'), validate='required')= forum ? forum.creationReason : ''
+      .form-group
+        label.col-sm-2.control-label(for='justificatory') #{t('forum.form.justificatory')}  
+        div.col-sm-10
+          input.form-control(type='hidden', id='justificatory', name='justificatory', value=forum ? forum.justificatoryUrl : '')
+          div.uploadJustificatory 
       .form-group
         label.col-sm-2.control-label(for='title') #{t('forum.form.title.label')}
         div.col-sm-10
